# ET-COME

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.ini  Makefile  README.md  additional_notes.html  documentation.html  genindex.html  getting_started.html  index.html  inspire.py  modules.html  objects.inv  pyproject.toml  references.html  release_notes.html  requirements.txt  search.html  searchindex.js  sphinx-reading-durations.json
.github/workflows/: docs.yaml  publish.yaml  test.yaml
_sources/: documentation.rst.txt  getting_started.rst.txt  index.rst.txt  references.rst.txt  release_notes.rst.txt
docs/: additional_notes.rst  conf.py  modules.rst
docs/_static/: custom.css
docs/extensions/: __init__.py  custom_skip.py
experiments/: analysis.ipynb  analysis_inspire.ipynb  analysis_new.ipynb  bagging_smote.ipynb  bagging_smote.py  datests_desc.ipynb  hardware_usage.ipynb  inspire.py  test.ipynb  test_2.ipynb  utils.py
experiments/analysis/: check_missing.ipynb  tmp.ipynb
experiments/analysis/tables/: ignore_additional_comprasion_agg.csv  ignore_additional_comprasion_info.csv
experiments/docs/plan/: 01-overview.md  02-method.md  03-multiclass.md  04-debugging.md  05-complexity.md  06-hyperparameters.md  07-ablation.md  08-evaluation.md  09-related-work.md  10-risks.md  11-roadmap.md  12-references.md  README.md
experiments/old/: analysis.ipynb  hardware_usage.ipynb  test.ipynb  test_2.ipynb  test_basic.ipynb
experiments/old/results/: breast_cancer_results_2.json  diabetes_results_2.json  ionosphere.json  ionosphere_results_2.json  pima_results.json  polish_companies_results.json  polish_companies_results_2.json  wisconsin_cancer.json
experiments/results/: breast_cancer_results_2.json  data_comphrasion_df.csv  data_comphrasion_df.tex  diabetes_results_2.json  ionosphere.json  ionosphere_results_2.json  pima_results.json  polish_companies_results.json  polish_companies_results_2.json  wisconsin_cancer.json
experiments/results/run_0/: Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__bagging__1.pkl  Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__bagging__2.pkl  Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__bagging__3.pkl  Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__bagging__4.pkl  Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__bagging__5.pkl  Breast Cancer Wisconsin (Diagnostic)__BorderlineSMOTE__DecisionTreeClassifier__no_bagging__2.pkl  (+502 more)
experiments/src/: bagging_classifier.py  bagging_experiments.py  dataset_manager.py  efficient_smote.py  experiments_utils.py  inspire.py  inspire_experiments.py  plots_utils.py  report_utils.py  results_utils.py  training_utils.py  utils.py
experiments/tables/: comparison_info_detailed.csv  comparison_info_ultimate.csv  results_agg_small_ultimate.csv  results_agg_ultimate.csv  results_params_count.csv
report/: report.tex
src/et_come/: __init__.py
tests/: conftest.py  smoke_test.py
(+22 files in other folders)
