[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "et-come"
version = "0.1.0"
description = "Equilibrium Transport with Conformal Minority Expansion for class imbalance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

keywords = [
    "oversampling",
    "class imbalance",
    "imbalanced learning",
    "machine learning",
    "data augmentation",
    "optimal transport",
    "ensemble methods",
    "synthetic data",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

authors = [
    { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]
maintainers = [
    { name = "Paweł Pozorski", email = "pozorski.paul@gmail.com" },
]

dependencies = [
    "hnswlib>=0.8",
    "humanize>=4.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "tqdm>=4.65",
]

[dependency-groups]
dev = [
    "imbalanced-learn>=0.12",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "kagglehub>=0.3",
    "mlflow>=2.0",
    "mlflow-sysmetrics>=0.1",
    "nbformat>=5.9",
    "pre-commit>=3.5",
    "psutil>=5.9",
    "pytest>=8.0",
    "ruff>=0.9",
    "seaborn>=0.13",
    "ucimlrepo>=0.0.7",
]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.14",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PIE",
    "PTH",
    "RUF",
    "S",
]
ignore = [
    "N806",  # lowercase variable in class scope — matches pre-commit hook
    "S101",  # assert statements
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["et_come"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"**/__init__.py" = ["F401"]      # re-exports are intentional
"experiments/**/*.py" = ["ARG"]  # unused params common in experiment scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore:.*builtin type (SwigPy|swigvarlink).* has no __module__ attribute:DeprecationWarning",
]
